--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
     <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
     <meta itemprop="description" name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
     <meta itemprop="keywords" name="keywords" content="{% for tag in site.tags %}{{ tag[0] }}, {% endfor %}">
-    <meta itemprop="author" name="author" content="Frank Sun 孫景承">
+    <meta itemprop="author" name="author" content="Ray Sin 辛祐任">
     <meta name="distribution" content="Taiwan">
     <meta itemprop="inLanguage" http-equiv="Content-Language" content="zh-TW, En">
     <meta name="google-site-verification" content="39XMF-gcAC9yP0_k97rCZGGZgv-HEghOzHpawoQzYL0" />
@@ -74,7 +74,7 @@
 <script>
   // Google AdSense
   (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-7446767830186218",
+    google_ad_client: "ca-pub-7431302996495749",
     enable_page_level_ads: true
   });
 </script>
