--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -30,9 +30,9 @@ layout: default
     {
         "@context": "http://schema.org",
         "@type": "Person",
-        "name": "Frank Sun 孫景承",
-        "jobTitle": "ASP.NET Developer",
-        "homeLocation": "https://frank198978104.github.io/",
-        "url": "https://frank198978104.github.io/about/"
+        "name": "Ray Sin 辛祐任",
+        "jobTitle": "Data Analyst",
+        "homeLocation": "https://q8977452.github.io/",
+        "url": "https://q8977452.github.io/about/"
       }
 </script>
