--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,9 +5,9 @@ layout: default
     <div class="left">
             <meta itemprop="mainEntityOfPage" itemscope itemtype="http://schema.org/WebPage">
             <div itemprop="publisher" itemscope itemtype="https://schema.org/Organization">
-                <meta itemprop="name" content="Frank Sun Blog">
+                <meta itemprop="name" content="Ray Sin Blog">
                 <div itemprop="logo" itemscope itemtype="https://schema.org/ImageObject">
-                    <meta itemprop="url" content="https://frank198978104.github.io/favicon.ico/">
+                    <meta itemprop="url" content="https://q8977452.github.io/favicon.ico/">
                 </div>
             </div>
             <h1 itemprop="headline">{{page.title}}</h1>
@@ -155,7 +155,7 @@ layout: default
                     BloggerAds
                 </div>
                 <ul style="text-align:center; overflow:hidden;" class="">
-                    <script type="text/javascript" src="//js1.bloggerads.net/ShowAds.aspx?blogid=20170829000003" async></script>
+					<script type="text/javascript" src="//js1.bloggerads.net/ShowBanner.aspx?blogid=20200325000001" async></script>
                 </ul>
             </div>
         </div>
