--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,9 +17,9 @@
             <a href="https://www.linkedin.com/in/{{site.linkedIn_username}}" title="LinkedIn"><i class="fa fa-linkedin" aria-hidden="true"></i></a> {% endif %} {% if site.dribbble_username %}
             <a href=" https://dribbble.com/{{site.dribbble_username}}" title="Dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i></a> {% endif %}
         </p>
-        <p>
+       <!--  <p>
             本站總訪問量<span id="busuanzi_value_site_pv"></span>次，本站訪客數<span id="busuanzi_value_site_uv"></span>人次，本文總閱讀量<span id="busuanzi_value_page_pv"></span>次
-        </p>
+        </p> -->
         <p class="power">
             <span>
                 Site powered by <a href="https://jekyllrb.com/">Jekyll</a> & <a href="https://pages.github.com/">Github Pages</a>.
@@ -27,8 +27,11 @@
             <span>
                 Theme designed by <a href="https://github.com/Gaohaoyang">HyG</a>.
             </span>
-            <span>
+            <!-- <span>
                 Originally and redesigned by <a href="https://github.com/frank198978104">Frank Sun</a>
+            </span> -->
+			<span>
+                Originally and redesigned by <a href="https://github.com/q8977452">Ray Sin</a>
             </span>
         </p>
     </div>
