--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,10 +41,10 @@ layout: default
             <div style="text-align:center; overflow:hidden;">
                 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 <!-- Head Ad -->
-                <ins class="adsbygoogle"
-                     style="display:inline-block;width:728px;height:90px"
-                     data-ad-client="ca-pub-7446767830186218"
-                     data-ad-slot="7623244623"></ins>
+				<ins class="adsbygoogle"
+                style="display:inline-block;width:300px;height:600px;overflow:hidden;"
+                data-ad-client="ca-pub-7431302996495749"
+                data-ad-slot="7431302996495749"></ins>
                 <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
@@ -155,8 +155,8 @@ layout: default
                     BloggerAds
                 </div>
                 <ul style="text-align:center; overflow:hidden;" class="">
-					<script type="text/javascript" src="//js1.bloggerads.net/ShowBanner.aspx?blogid=20200325000001" async></script>
-                </ul>
+				<script type="text/javascript" src="//js1.bloggerads.net/ShowBanner.aspx?blogid=20200325000001" async></script>
+				</ul>
             </div>
         </div>
     </div>
