--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,13 +41,13 @@ layout: default
             <div style="text-align:center; overflow:hidden;">
                 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                 <!-- Head Ad -->
-				<ins class="adsbygoogle"
+<!-- 				<ins class="adsbygoogle"
                 style="display:inline-block;width:300px;height:600px;overflow:hidden;"
                 data-ad-client="ca-pub-7431302996495749"
                 data-ad-slot="7431302996495749"></ins>
                 <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
-                </script>
+                </script> -->
             </div>
             <!-- AddToAny BEGIN -->
             <div style="float:right;" class="a2a_kit a2a_kit_size_32 a2a_default_style">
